<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".healthFragment"
    android:background="@drawable/healthbackground1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/header"
        >

        <EditText
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="@string/enterHere"
            android:textColorHint="#000000"
            tools:ignore="TouchTargetSizeCheck" />
        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_toRightOf="@+id/input"
            android:id="@+id/add"
            android:layout_marginLeft="7sp"
            android:layout_centerVertical="true"
            android:src="@drawable/add_item"
            android:contentDescription="@string/image"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:layout_centerInParent="true"
            android:ems="10" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_below="@+id/header"
        android:layout_above="@id/callButton"
        android:paddingLeft="50sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonstyle"
        android:text="@string/phoneCall"
        android:layout_marginBottom="10sp"/>

</RelativeLayout>